--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ height: 600px;">
 </div>
 </div>
 <!-- Hero -->
+ <div class="user-infor"></div>
 <div class="cards">
 <div class="card" style="width: 18rem;">
   <img class="card-img-top" src="doun.jpg" alt="Card image cap">
